# python-intro-v2

./: README.md
lesson01/: 01_variables.py  02_collections.py  03_sets_tuples.py  04_conditionals.ipynb  05_strings_forloops.ipynb
lesson02/: arith.py  functions_v1.py  functions_v2.py  functions_v3.py  functions_v4.py  functions_v5.py  functions_v6.ipynb  grades.py  utils.py
lesson03/: LICENCE  Makefile  pyproject.toml
lesson03/src/sendwave/: __init__.py  app.py  utils.py
lesson04/: 1_example.py  2_example.py  Makefile  README.md  data.csv  run.sh  sales.csv
lesson05/: 1_example.py  2_example.py  3_example.py  person.csv  purchases.txt  sales.txt  stock.csv  stock_v2.csv
